--- a/README
+++ b/README
@@ -1,24 +1,38 @@
-makeepub is a Python script that generates a epub file from a
-description file passed through the command line and a bunch of
-HTML files.
-The script generates the boring part of the ePub metadata, e.g.
-the index that appears both in contents.opf, toc.ncx, and also
+ebookmaker is a Python3 script that takes a JSON book description
+and a bunch of HTML files, and builds an eBook.
+The script generates the boring part of the eBook metadata, e.g.
+the index that appears both in contents.opf, toc.ncx, and
 in a HTML page.
-All the metadata is given in a dictionary contained in Python
-(NOTE: it's not safe, since the contents file is caused to be
-interpreted in Python, and a malicious person could put an
-import and tell the system to exec an "rm" command. In any case,
-the book description file is very small and you can check it
-before run. Later on I can change it to JSON. Later.)
 
-For the script to generate the indexes (content.opf, toc.ncx,
-and a HTML index, this last one may be hand made, if you want)
-the HTML content must follow a couple of simple rules:
+To allow the script to generate the various tables of contents
+(content.opf, toc.ncx, and the HTML index; although this last one
+may be hand made, if you want) the HTML content must follow a couple
+ of simple rules:
 
 * Use header tags consistently: <h1> for section/chapter,
   <h2> for subsection, <h3> for subsubsection.
 * Use the "id" attribute to identify the entry in the index.
 
-I thought that true Latin would be nicer than lorem ipsum, so
-I added a real Latin book as an example on how to use the script.
-It is in the "didascalicon" directory.
+In the future I'll document the JSON book description format,
+for now there are a couple of books in the examples directory.
+Enter the examples directory and run the script like this to
+build ePub files:
+
+  python3 ../../ebookmaker BOOK.json
+
+Here's the complete help:
+
+  Usage: ebookmaker [-h] [-f {epub,mobi}] [-o OUTPUT] ebookData
+
+  Generates ebooks from a description file.
+
+  positional arguments:
+    ebookData             JSON file containing the ebook information.
+
+  optional arguments:
+    -h, --help            show this help message and exit
+    -f {epub,mobi}, --format {epub,mobi}
+                          Format of the output (default: epub).
+    -o OUTPUT, --output OUTPUT
+                          Name of the output file.
+
